--- a/corpdata-app/src/main/resources/templates/common/generator/Mapper.xml.vm
+++ b/corpdata-app/src/main/resources/templates/common/generator/Mapper.xml.vm
@@ -1,80 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd" >
 <mapper namespace="${package}.dao.${className}Mapper">
-	<resultMap id="BaseResultMap" type="${package}.entity.${className}">
-#foreach($column in $columns)
-    #if($column.columnName == $pk.columnName )
-    <id column="id" property="id" />
-    #end
-#if($column.columnName != $pk.columnName )<result column="$column.columnName" property="$column.attrname" />
-    #end
-#end
-</resultMap>
+    <resultMap id="BaseResultMap" type="${package}.entity.${className}">
+		#foreach($column in $columns)
+			#if($column.columnName == $pk.columnName )
+                <id column="id" property="id" />
+			#end
+			#if($column.columnName != $pk.columnName )<result column="$column.columnName" property="$column.attrname" />
+			#end
+		#end
+    </resultMap>
 
-  	<sql id="Base_Column_List" >
+    <sql id="Base_Column_List" >
     	#foreach($column in $columns)$column.columnName #if($velocityCount != $columns.size()),#end#end
   	</sql>
-  	
-  	<insert id="insert" parameterType="${package}.entity.${className}"#if($pk.extra == 'auto_increment') useGeneratedKeys="true" keyProperty="$pk.attrname"#end>
-		insert into ${tableName}
-		(
-#foreach($column in $columns)
-#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
-			$column.columnName #if($velocityCount != $columns.size()), #end
 
-#end			
-#end
-		)
-		values
-		(
-#foreach($column in $columns)
-#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
-			#{$column.attrname}#if($velocityCount != $columns.size()), #end
+    <insert id="insert" parameterType="${package}.entity.${className}"#if($pk.extra == 'auto_increment') useGeneratedKeys="true" keyProperty="$pk.attrname"#end>
+        insert into ${tableName}
+        <trim prefix="(" suffix=")" suffixOverrides="," >
+			#foreach($column in $columns)
+				#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
+                    <if test="$column.attrname != null" >
+						$column.columnName,
+                    </if>
+				#end
+			#end
+        </trim>
+        <trim prefix="values (" suffix=")" suffixOverrides="," >
+			#foreach($column in $columns)
+				#if($column.columnName != $pk.columnName || $pk.extra != 'auto_increment')
+                    <if test="$column.attrname != null" >
+                        #{$column.attrname},
+                    </if>
+				#end
+			#end
+        </trim>
+    </insert>
 
-#end			
-#end
-		)
-	</insert>
-	 
-	<update id="update" parameterType="${package}.entity.${className}">
-		update ${tableName} 
-		<set>
-#foreach($column in $columns)
-#if($column.columnName != $pk.columnName && $column.columnName!='creater' && $column.columnName!='created')
-			<if test="$column.attrname != null">$column.columnName= #{$column.attrname}#if($velocityCount != $columns.size()), #end</if>
-#end
-#end
-		</set>
-		where ${pk.columnName} = #{${pk.attrname}}
-	</update>
-	
-	<delete id="deleteById" parameterType="java.lang.Long">
+    <update id="update" parameterType="${package}.entity.${className}">
+        update ${tableName}
+        <set>
+			#foreach($column in $columns)
+				#if($column.columnName != $pk.columnName && $column.columnName!='creater' && $column.columnName!='created')
+                    <if test="$column.attrname != null">$column.columnName= #{$column.attrname}#if($velocityCount != $columns.size()), #end</if>
+				#end
+			#end
+        </set>
+        where ${pk.columnName} = #{${pk.attrname}}
+    </update>
+
+    <delete id="deleteById" parameterType="java.lang.Long">
 		delete from ${tableName} where ${pk.columnName} = #{id}
 	</delete>
-	
-	<delete id="deleteByIds">
-		delete from ${tableName} where ${pk.columnName} in 
-		<foreach item="${pk.attrname}" collection="array" open="(" separator="," close=")">
-			#{${pk.attrname}}
-		</foreach>
-	</delete>
-	
-	<select id="selectById" parameterType="java.lang.Long" resultMap="BaseResultMap">
-		select <include refid="Base_Column_List" /> 
-		from ${tableName} where ${pk.columnName} = #{id}
-	</select>
-	
- 	<select id="selectCount" resultType="int">
+
+    <delete id="deleteByIds">
+        delete from ${tableName} where ${pk.columnName} in
+        <foreach item="${pk.attrname}" collection="array" open="(" separator="," close=")">
+            #{${pk.attrname}}
+        </foreach>
+    </delete>
+
+    <select id="selectById" parameterType="java.lang.Long" resultMap="BaseResultMap">
+        select <include refid="Base_Column_List" />
+        from ${tableName} where ${pk.columnName} = #{id}
+    </select>
+
+    <select id="selectCount" resultType="int">
 		select count(*) from ${tableName} where 1=1
 	</select>
 
-	<select id="selectAll" resultMap="BaseResultMap">
-		select <include refid="Base_Column_List" />  from ${tableName}
-        where 1=1 
+    <select id="selectAll" resultMap="BaseResultMap">
+        select <include refid="Base_Column_List" />  from ${tableName}
+        where 1=1
+    </select>
+
+    <select id="existsWithKeyName" resultType="int" parameterType="String">
+		select 1 from ${tableName} where 1=1
 	</select>
-	
-	<select id="existsWithKeyName" resultType="int" parameterType="String">
-		select 1 from ${tableName} where 1=1 
-	</select>
-	
+
 </mapper>
