--- a/corpdata-app/src/main/resources/templates/system/org/dept/dept_edit.html
+++ b/corpdata-app/src/main/resources/templates/system/org/dept/dept_edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
-        <title>菜单管理</title>
+        <title>组织管理</title>
         <div th:replace="/common/system_form_header" ></div>
         <script type="text/javascript">
             $(function () {
